# dynamodb-fun

./: .gitignore  README.md  main.tf
data-read/: main.py  pyproject.toml  requirements.txt
streamed-lambda-response/: README.md  app.py  requirements.txt
