[project]
name = "data-read"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Quintero",email = "michaelq.quintero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.40.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
